# md-chat

./: Cargo.toml  Info.plist  LICENSE  Makefile  README.md  example.md
assets/: icon.icns
docs/: make-icon.sh  md-chat.icns
src/: app.rs  config.rs  main.rs  openai.rs
src/components/: input_panel.rs  message_list_panel.rs  mod.rs  top_panel.rs
