[package]
name = "md-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }  # GUI framework (includes egui)  
egui_commonmark = { version = "0.20", features = ["better_syntax_highlighting"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }  # HTTP client
tokio = { version = "1.36", features = ["full"] }  # Async runtime
anyhow = "1.0"  # Error handling
